--- a/reactmessagingv1.fe/src/components/DashboardPage.css
+++ b/reactmessagingv1.fe/src/components/DashboardPage.css
@@ -1,7 +1,7 @@
 .dashboard-container {
     display: flex;
     width: 100%;
-    height: 90vh;
+    height: 100%;
 }
 
 .sidebar {
@@ -13,7 +13,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 16px;
 }
 
 .avatar {
