--- a/reactmessagingv1.fe/src/components/LoginPage.css
+++ b/reactmessagingv1.fe/src/components/LoginPage.css
@@ -6,7 +6,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100%;
     width: 100%;
 }
 
