--- a/reactmessagingv1.fe/src/components/DashboardPage.css
+++ b/reactmessagingv1.fe/src/components/DashboardPage.css
@@ -1,148 +1,18 @@
-.dashboard-container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
-
-.sidebar {
-    width: 25%;
-    height: 100%;
-    background-color: #36393f;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.avatar {
-    background-color: #3f51b5;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    color: #fff;
-    font-size: 1.2rem;
-}
-
-.sidebar-buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.sidebar-btn {
-    background-color: transparent;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-    margin-bottom: 16px;
-    padding: 8px;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-}
-
-    .sidebar-btn:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-    }
-
 .main {
-    width: 75%;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-color: #DEDEDE;
 }
 
-.messages {
-    flex-grow: 1;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column-reverse;
+.btn-rounded-0 {
+    border-radius: 0;
 }
 
-.message {
-    width: 100%;
-    display: flex;
-    margin-bottom: 16px;
-    align-items: center;
+.sidebar-buttons .btn:last-child {
+    border-bottom: none !important;
 }
 
-.message-avatar {
-    width: 40px;
-    height: 40px;
-    background-color: #3f51b5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    color: #fff;
-    font-size: 1.2rem;
-    margin-right: 16px;
-}
-
-.message-content {
-    display: flex;
-    flex-direction: column;
-}
-
-.chat-message-text {
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.message-info {
-    display: flex;
-    margin-top: 4px;
-}
-
-.message-sender {
-    color: #3f51b5;
-    margin-right: 8px;
-}
-
-.message-time {
-    color: #999;
-}
-
-.chat-input {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 16px;
-}
-
-    .chat-input input {
-        width: 90%;
-        padding: 8px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-    }
-
-.send-message-btn {
-    width: 9%;
-    padding: 8px;
-    background-color: #3f51b5;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-    .send-message-btn:hover {
-        background-color: #303f9f;
-    }
-
-    .send-message-btn:focus {
-        outline: none;
-    }
-
-.chat-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+.sidebar-buttons .btn {
+    border-bottom: none !important;
+    border-radius: 0;
+    border-left: none;
+    border-right: none;
 }
