--- a/FrostFlow.FE/src/components/DashboardPage.css
+++ b/FrostFlow.FE/src/components/DashboardPage.css
@@ -1,5 +1,23 @@
 .main {
-    background-color: #DEDEDE;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+@media (max-width: 767px) {
+    .main {
+        background-image: url("../../public/main.png");
+        background-size: cover;
+    }
+}
+
+@media (min-width: 768px) {
+    .main {
+        background-image: url("../../public/main-desktop.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+    }
 }
 
 .btn-rounded-0 {
@@ -15,4 +33,40 @@
     border-radius: 0;
     border-left: none;
     border-right: none;
+}
+
+.dashboard-container {
+    height: calc(100vh - 2.45rem); 
+}
+
+.accordion-item {
+    border-radius: 0 !important;
+    border: 0 !important;
+}
+
+.accordion-item:first-of-type .accordion-button {
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+}
+
+.accordion-item:last-of-type .accordion-button.collapsed {
+    border-bottom-right-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+}
+
+.accordion-item:first-of-type {
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+}
+
+.accordion-item:last-of-type {
+    border-bottom-right-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+}
+
+.accordion-button {
+    padding-top: .75rem !important;
+    padding-bottom: .75rem !important;
+    border-radius: 0!important;
+    color: white !important;
 }
