--- a/FrostFlow.FE/src/components/ResizableWindowComponent.css
+++ b/FrostFlow.FE/src/components/ResizableWindowComponent.css
@@ -1,6 +1,16 @@
 .react-draggable {
-    background-color: #fff;
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
     border-radius: 0.65rem;
+}
+
+.window-header {
+    border-top-left-radius: .65rem;
+    border-top-right-radius: .65rem;
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+    border: 1px var(--bs-primary) solid;
+    border-bottom: 0;
 }
 
     .window-header h2 {
@@ -18,13 +28,13 @@
 .window-controls {
     display: flex;
     gap: 0.5rem;
-    align-self: start;
+    align-self: center;
     max-width: 20%;
 }
 
     .window-controls button {
-        width: 16px;
-        height: 16px;
+        width: 1rem;
+        height: 1rem;
         border-radius: 50%;
         border: none;
         cursor: pointer;
