--- a/FrostFlow.FE/src/custom-theme.scss
+++ b/FrostFlow.FE/src/custom-theme.scss
@@ -7,9 +7,107 @@ $danger: #dc3545; // Bootstrap danger color
 $light: #f7f8f8; // Message color
 $dark: darken($primary, 20%); // Dark color for elements
 
-$theme-colors: ( "primary": $primary, "secondary": $secondary, "success": $success, "info": $info, "warning": $warning, "danger": $danger, "light": $light, "dark": $dark, "accordion-bg": $primary, "accordion-color": $light);
+$theme-colors: ( "primary": $primary, "secondary": $secondary, "success": $success, "info": $info, "warning": $warning, "danger": $danger, "light": $light, "dark": $dark );
 
 @import '~bootstrap/scss/bootstrap';
 
 // Custom styles
-// ...
+
+.chevron-down {
+    margin-left: auto;
+    transition: transform 0.25s cubic-bezier(0, 0, 0, 1);
+}
+
+.szh-accordion {
+    border-bottom: none;
+
+    &__item {
+        border-top: none;
+
+        &-btn {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            margin: 0;
+            padding: .5rem 1rem;
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            font-feature-settings: normal;
+            font-kerning: auto;
+            font-optical-sizing: auto;
+            font-size: 1.1rem;
+            font-stretch: 100%;
+            font-style: normal;
+            font-variant-alternates: normal;
+            font-variant-caps: normal;
+            font-variant-east-asian: normal;
+            font-variant-ligatures: normal;
+            font-variant-numeric: normal;
+            font-variation-settings: normal;
+            font-weight: 500;
+            -webkit-font-smoothing: antialiased;
+            text-align: left;
+            color: $light;
+            background-color: transparent;
+            border: none;
+
+            &:before {
+                content: "";
+                display: inline-block;
+                background-image: url("../public/chat.png");
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 2rem;
+                height: 2rem;
+                margin-right: .65rem;
+            }
+
+            &:hover {
+                background-color: $primary;
+            }
+        }
+
+        &-content {
+            transition: height 0.25s cubic-bezier(0, 0, 0, 1);
+        }
+
+        &-panel {
+            padding: 0rem;
+
+            .btn {
+                text-align: start;
+                color: white;
+                margin-left: 1rem;
+                font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+                font-feature-settings: normal;
+                font-kerning: auto;
+                font-optical-sizing: auto;
+                font-size: 1rem;
+                font-stretch: 100%;
+                font-style: normal;
+                font-variant-alternates: normal;
+                font-variant-caps: normal;
+                font-variant-east-asian: normal;
+                font-variant-ligatures: normal;
+                font-variant-numeric: normal;
+                font-variation-settings: normal;
+                font-weight: 500;
+                -webkit-font-smoothing: antialiased;
+            }
+
+            &:hover {
+                background-color: $primary;
+            }
+        }
+
+        &--expanded {
+            .szh-accordion__item-btn {
+                background-color: $primary;
+            }
+
+            .chevron-down {
+                transform: rotate(180deg);
+            }
+        }
+    }
+}
