--- a/FrostFlow.FE/src/components/ChatComponent.css
+++ b/FrostFlow.FE/src/components/ChatComponent.css
@@ -78,7 +78,8 @@ html {
 }
 
 .chat-input {
-    padding: .5rem;
+    position: relative;
+    padding: .7rem .5rem;
     border-top: 1px solid var(--bs-light);
     border-bottom-left-radius: .65rem;
     border-bottom-right-radius: .65rem;
@@ -86,16 +87,25 @@ html {
 }
 
     .chat-input input {
-        border: none;
-        box-shadow: none;
+        border-radius: 1rem;
     }
 
-    .chat-input .btn-primary {
-        background-color: var(--bs-primary);
-        border: none;
-        padding: 10px 20px;
-        border-radius: 20px;
+.send-icon {
+    position: absolute;
+    right: .75rem; /* adjust as needed */
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: var(--bs-primary);
+    transition: fill 0.2s ease-in-out;
+}
+
+    .send-icon.disabled {
+        fill: gray; /* color when input is empty */
+        pointer-events: none; /* prevent click events when disabled */
     }
+
 
 .flex-grow-1 {
     flex-grow: 1;
