--- a/FrostFlow.FE/src/components/DashboardPage.css
+++ b/FrostFlow.FE/src/components/DashboardPage.css
@@ -29,3 +29,11 @@
     height: 3.5rem;
     content: "";
 }
+
+.col-md-1{
+    width: 6.333333333% !important;
+}
+
+.col-md-11 {
+    width: 93.66666667% !important;
+}
